Added some handlebars integration to these pages

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,2 +1,51 @@
-<h2> CART PAGE!!!! </h2>
-<h2> DO EMOJIS WORK??? 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
+<div class="card shadow-lg o-hidden border-0 my-5" style="height: 600px;width: 90%;">
+    <div class="card-body p-0">
+        <h4 class="text-left mb-4" style="height: 10px;font-size: 33px;margin-bottom: 0px;padding-top: 30px;padding-bottom: 30px;margin-left: 36px;margin-top: 10px;"><strong>Shopping Cart</strong><br><br><br></h4>
+        <p class="lead text-left" style="font-size: 20px;margin-left: 36px;margin-bottom: 0px;">Ready to check out?<br>Review what is in your cart and continue!</p>
+        <div class="col" style="padding-left: 0px;">
+            <div class="content">
+                <div class="row no-gutters justify-content-center align-items-center" style="margin-top: 20px;">
+                    <div class="col-md-12 col-lg-8" style="margin-right: 0px;">
+                        <div class="items">
+                            <div class="product">
+                                <div class="row justify-content-center align-items-center" style="margin-left: 0px;width: 596px;">
+                                    <div class="col-md-3" style="margin-bottom: 17px;">
+                                        <div class="product-image" style="height: 90px;"><img class="img-fluid d-block mx-auto image" src="images/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50"></div>
+                                    </div>
+                                    <div class="col-md-5 product-info" style="height: 115px;width: 242px;"><a class="product-name" href="#">Batch 35</a>
+                                        <div class="product-specs">
+                                            <div><span style="font-size: 12px;"><strong>Description:&nbsp;</strong></span>
+                                                <p style="font-size: 11px;">This savory smear-ripened raw cows' milk cheese with a full scattering of eyes has an aromatic soft yellow paste, and a crisp coppery rind. Aged 2-4 months.</p><span class="value"></span></div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6 col-md-2 quantity"><label class="d-none d-md-block" for="quantity" style="font-size: 16px;">Quantity</label><input type="number" id="number" class="form-control quantity-input" value="1" style="width: 50px;padding-right: 6px;padding-bottom: 6px;padding-left: 6px;"></div>
+                                    <div
+                                        class="col-6 col-md-2 price" style="margin-left: -1px;"><span>$120</span></div>
+                            </div>
+                        </div>
+                        <div class="product"></div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-4">
+                    <div class="summary" style="width: 172px;">
+                        <h3 style="font-size: 22px;">Total Summary</h3>
+                        <h4><span class="text">Subtotal</span><span class="price">$360</span></h4>
+                        <h4><span class="text">Shipping</span><span class="price">$0</span></h4>
+                        <h4><span class="text">Total</span><span class="price">$360</span></h4><button class="btn btn-primary btn-block btn-lg" type="button">Checkout</button></div>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+</div>
+</div>
+<script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
+<script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
+<script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
+<script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
+</body>
