--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,13 +31,13 @@
                 data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
                     <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="about.html" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="about" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="market" style="font-size: 20px;">Market</a></li>
                         <li class="nav-item" role="presentation"></li>
                         <li class="nav-item dropdown" style="background-color: rgb(255,250,241);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#" style="font-size: 20px;">At The Farm&nbsp;</a>
-                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Visit The Farm</a><a class="dropdown-item" role="presentation" href="#">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog.html">Blog</a></div>
+                            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="visitTheFarm">Visit The Farm</a><a class="dropdown-item" role="presentation" href="summerCamp">Summer Camp</a><a class="dropdown-item" role="presentation" href="blog">Blog</a></div>
                         </li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-size: 20px;">Contact</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="contact" style="font-size: 20px;">Contact</a></li>
                         <li class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-shopping-cart fa-fw" style="font-size: 23px;height: 27px;width: 30px;margin: 3px;"></i><span class="badge badge-danger badge-counter"></span></a>
                             <div
                                 class="dropdown-menu dropdown-list dropdown-menu-right animated--grow-in" role="menu">
@@ -52,7 +52,7 @@
                                     <p class="text-center d-inline float-left"></p>
                                 </a>
                                 <a class="d-flex align-items-center dropdown-item" href="#">
-                                    <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="assets/img/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50" style="width: 50px;height: 50px;"></div>
+                                    <div class="dropdown-list-image mr-3"><img class="rounded-circle" src="images/batch35.jpg?h=3228dc9d8a5e17d2246c29dfb556fb50" style="width: 50px;height: 50px;"></div>
                                     <div class="font-weight-bold">
                                         <div class="text-truncate"><span style="font-size: 15px;">Batch 35</span></div>
                                         <p class="small text-gray-500 mb-0" style="font-size: 13px;">Price Per Unit: $10.00<br>Quantity: 1</p>
@@ -60,7 +60,7 @@
                                 </a><a class="text-center dropdown-item small text-gray-500" href="#" style="font-size: 20px;background-color: rgb(79,121,96);color: rgb(255,255,255);padding: 4px;"><strong>Check Out</strong></a></div>
                 </li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="padding: 8px;margin: 0px;"></a></li>
-                </ul><button class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+              </ul><button onclick = "window.location.href='login'" class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
         </div>
     </nav>
 
@@ -87,7 +87,7 @@
                         <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
                         <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Hours: &nbsp;Everyday, 11:00 AM - 4:00 PM<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
                     </div>
-                    <div class="col item social" style="height: 41px;"><a href="#" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
+                    <div class="col item social" style="height: 41px;"><a href="https://www.facebook.com/sproutcreekfarm/" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="https://twitter.com/sproutcreekfarm?lang=en"><i class="icon ion-social-twitter"></i></a><a href=""><i class="icon ion-social-snapchat"></i></a><a href="https://www.instagram.com/sproutcreekfarm/?hl=en"><i class="icon ion-social-instagram"></i></a></div>
                     <div
                         class="clearfix"></div>
             </div>
@@ -103,7 +103,7 @@
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
+    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
     </body>
 
 </html>
