--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
           <div class="card-body p-0">
               <div class="row">
                   <div class="col-lg-6 d-none d-lg-flex">
-                      <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;assets/img/Screen%20Shot%202019-10-17%20at%2012.45.40%20PM.png?h=ad61056d996fd9c621711ba11e9c57b4&quot;);height: 525px;background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
+                      <div class="flex-grow-1 bg-login-image" style="background-image: url(&quot;images/Screen%20Shot%202019-10-17%20at%2012.45.40%20PM.png?h=ad61056d996fd9c621711ba11e9c57b4&quot;);height: 525px;background-position: center;background-repeat: no-repeat;background-size: cover;"></div>
                   </div>
                   <div class="col-lg-6">
                       <div class="p-5" style="margin-top: 20px;">
@@ -30,45 +30,4 @@
           </div>
       </div>
   </div>
-<!--
-<link rel='stylesheet' href='/stylesheets/login.css' />
-<script src="javascripts/login.js" async></script>
-
-<div class="login-div">
-  <h2 class="center-text"> Login </h2>
-  <form>
-    <table class="center-table">
-      <tr>
-        <td colspan="2">
-          <a href="/create_account">Create An Account</a>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <a href="/forgot_password">Forgot Password?</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Username
-        </td>
-        <td>
-          <input id="username" type="textbox"/>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Password
-        </td>
-        <td>
-          <input id="password" type="password"/>
-        </td>
-      </tr>
-      <tr>
-        <td colspan="2">
-          <input type="button" value="Login" onClick="login()"/>
-    </table>
-  </form>
-</div>
--->
 </body>
