--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -5,7 +5,7 @@
             <div class="row" style="height: 596px;">
                 <div class="col-lg-5 d-none d-lg-flex">
                     <!--This is the image we see next to create account form box-->
-                    <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;assets/img/IMG_3123_0.JPG?h=0d30782d6f67ca96ae30d666dd15cb1f&quot;);"></div>
+                    <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;images/IMG_3123_0.JPG?h=0d30782d6f67ca96ae30d666dd15cb1f&quot;);"></div>
                 </div>
                 <!-- This div contains the text boxes for the create account page here-->
                 <div class="col-lg-7" style="height: 650px;">
