Added comments and removed a few lines

--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -1,3 +1,8 @@
+<!--File: create_account.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/09/2019-->
+<!--Description: This is the body of the create acocunt page-->
+
 <body style="background-color: #fffdfa;">
 <div class="container" style="height: 675px;padding: -1px;width: 100%;">
     <div class="card shadow-lg o-hidden border-0 my-5" style="height: 524px;">
@@ -43,47 +48,6 @@
         </div>
     </div>
 </div>
-<!--This is the foot that is holding our div-->
-<!-- <div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 item">
-                    <ul></ul><img src="assets/img/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
-                <div class="col-sm-6 col-md-3 item">
-                    <ul>
 
-                        <li style="height: 35px;font-size: 20px;">About</li>
-                        <li style="font-size: 20px;height: 35px;">Market</li>
-                        <li style="height: 35px;font-size: 20px;">At The Farm</li>
-                        <li style="font-size: 20px;height: 35px;">Support</li>
-                        <li><a href="#"></a></li>
-                    </ul>
-                </div>
-
-                <div class="col-md-6 item text">
-
-                    <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
-                    <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
-                </div>
-                <div class="col item social" style="height: 41px;"><a href="#" style="width: 41px;"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a></div>
-                <div
-                    class="clearfix"></div>
-        </div>
-        <p class="copyright">Sprout Creek Farm © 2019</p>
-</div>
-</footer>
-</div> -->
-
-<!-- Thhis is where we import the javascript files-->
-<script src="assets/js/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-<script src="assets/bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-<script src="assets/js/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-<script src="assets/js/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610"></script>
 </body>
