--- a/views/support.hbs
+++ b/views/support.hbs
@@ -1,5 +1,5 @@
 <body style="background-color: #fffdfa;">
-    <div data-bs-parallax-bg="true" style="height: 480px;background-image: url(&quot;assets/img/DSC_7553.jpg?h=6fb7f77418f4702a9421862424bc40f6&quot;);background-position: center;background-size: cover;"></div>
+    <div data-bs-parallax-bg="true" style="height: 480px; background-image: url(&quot;images/DSC_7553.jpg?h=6fb7f77418f4702a9421862424bc40f6&quot;);background-position: center;background-size: cover;"></div>
     <div>
         <div class="container">
             <div class="row">
@@ -118,7 +118,7 @@
     </div>
     </footer>
     </div>
-  --> 
+  -->
     <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
     <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
