--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,25 +1,29 @@
+<!--File: homepage.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/09/2019-->
+<!--Description: This is the body of the homepage page-->
+
 <body style="background-color: #fffdfa;">
+  <!--This div holds the three paralax images we see on the homepage-->
   <div style="background-repeat: no-repeat; width: 100%;">
+      <!--This holds the first image-->
       <div id="box-2" style="background-image: url(&quot;images/Screen%20Shot%202019-10-16%20at%202.48.05%20PM.png?h=505acbc2170c2fd347522653fa8cf0fa&quot;);background-repeat: no-repeat;height: 1010px;background-position: top;background-size: cover;opacity: 1;">
+          <!--This is the first paralax effect and has the words Our Farm in the middle of the page-->
           <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="font-size: 56px;height: 838px;">Our Farm</h1>
       </div>
+      <!--This holds the second image-->
       <div id="box-3" style="background-repeat: no-repeat;background-image: url(&quot;images/Screen%20Shot%202019-10-16%20at%202.46.29%20PM.png?h=2672f43c06bac8badd35c7a44954d867&quot;);background-size: cover;background-position: center;opacity: 1;">
+          <!--This is the second paralax effect and has the words Our People-->
           <h1 class="shadow-lg" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;none&quot;);height: 838px;background-size: cover;background-repeat: no-repeat;font-size: 56px;">Our People</h1>
       </div>
+      <!--This hodls the third image-->
       <div id="box-1" style="background-image: url(&quot;images/June%20%20Bug.jpg?h=67baae218b948484ab3f1c07181faa2d&quot;);background-size: cover;background-repeat: no-repeat;background-position: center;opacity: 1;">
+          <!--This is the third and final paralx image we see and it has the words Our Story-->
           <h1 class="shadow-lg" data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;none&quot;);background-size: cover;background-repeat: no-repeat;font-size: 56px;">Our Story</h1>
       </div>
+      <!--This is the last image we see with the Sprout Creek Logo in it at the bottom of the page-->
       <div id="box-1" style="background-position: right;background-repeat: no-repeat;background-size: cover;background-image: url(&quot;none&quot;);opacity: 1;">
           <h1 data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" style="background-image: url(&quot;images/IMG_3123_0-1.jpg?h=81f4696c77d57e8efb55ffdd066e10ba&quot;);background-repeat: no-repeat;background-size: cover;background-position: right;font-size: 56;margin: 0px;padding: 0px;"><img data-aos="fade-up" data-aos-duration="2000" data-aos-once="true" src="images/logo-1.png?h=7e41bf5ab9b7fcded5742bc15631d247" style="width: 328px;"><br><br>educate ·&nbsp;cultivate ·&nbsp;aspire</h1>
       </div>
   </div>
-    <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 </body>
