--- a/views/user_dashboard-edit_info.hbs
+++ b/views/user_dashboard-edit_info.hbs
@@ -1,5 +1,6 @@
 <h2> USER ACCOUNT EDIT INFO PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
+<script src="../javascripts/createAccount.js" async></script>
 
 
 <ul>
@@ -7,6 +8,73 @@
   <li> <a href="/user_dashboard/view_orders"> View Orders </a> </li>
   <li> <a href="/user_dashboard/edit_information"> Edit Information </a> </li>
 </ul>
+
+
+<form>
+  <table>
+    <tr>
+      <td>
+        First Name
+      </td>
+      <td>
+        <input id="first_name" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Last Name
+      </td>
+      <td>
+        <input id="last_name" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Address
+      </td>
+      <td>
+        <input id="address" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        City
+      </td>
+      <td>
+        <input id="city" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        ZIP
+      </td>
+      <td>
+        <input id="zip" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Phone Number
+      </td>
+      <td>
+        <input id="phone_number" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Password
+      </td>
+      <td>
+        <input id="password" type="password"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <input type="button" value="Submit" onclick="updateAccount()"/>
+      </td>
+    </tr>
+</form>
+
 
 <input type=button value="logout" onClick="eraseCookie()"/>
 
