Added some comments and removed extra code that was unnecessary

--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -39,9 +39,9 @@
                             <hr>
                         </form>
                         <!-- This is the forgot password link for the user -->
-                        <div class="text-center" style="margin-top: 14px;"><a class="small" href="forgotPassword.html" style="font-size: 16px;margin-top: 7px;">Forgot Password?</a></div>
+                        <div class="text-center" style="margin-top: 14px;"><a class="small" href="forgot_password" style="font-size: 16px;margin-top: 7px;">Forgot Password?</a></div>
                         <!-- This is the login button for the user -->
-                        <div class="text-center"><a class="small" href="login.html" style="font-size: 16px;height: auto;margin: 0px;padding: 0px;">Already have an account? Login!</a></div>
+                        <div class="text-center"><a class="small" href="login" style="font-size: 16px;height: auto;margin: 0px;padding: 0px;">Already have an account? Login!</a></div>
                     </div>
                 </div>
             </div>
