--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,15 +1,25 @@
+<!--File: layout.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/09/2019-->
+<!--Description: This is the layout page.  This is the header and footer for every page-->
 <!DOCTYPE html>
 <html>
 
 <head>
+    <!--This sets the correct character sets and viewing options-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>SproutCreekFarm</title>
+
+    <title>Sprout Creek Farm</title>
+
+    <!--Import the images in the nav bar and footer here-->
     <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
     <link rel="icon" type="image/png" sizes="290x290" href="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21">
+
+    <!--Here we import the stylesheets for the nav bar and footer-->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css?h=6d65b9bd53bb19cdce4b34d2020a2b57">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="fonts/fontawesome-all.min.css?h=cfa788754642173dafbd830bd7969fdb">
@@ -20,17 +30,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
+
+    <!--Here we import the client javascript-->
     <script src="javascripts/client.js" async></script>
 </head>
 
+<!--This body has the nav bar and footer code in it-->
 <body style="background-color: #fffdfa;">
+
+    <!--This is where the nav bar begins-->
     <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean" style="background-color: rgb(255,250,241);padding: 0px;width: 100%;height: 150px;">
         <div class="container-fluid"><img class="img-fluid" src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 500px;height: 51%;padding: 0px;margin: 3px;">
+            <!--Here is the Sprout Creek Farm words in the header-->
             <div><a class="navbar-brand text-left float-left" href="/" style="padding: 3px;margin: 0px;font-size: 25px;">Sprout Creek Farm<div style="width: 173px;height: 32px;"><input class="form-control-plaintext" type="text" value="Educate, Cultivate, Aspire" readonly="" style="font-size: 15px;width: 176px;"></div></a></div>
+            <!--This is where the words Sprout Creek Farm act as a button but is a clickable logo-->
             <button
                 data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse text-justify" id="navcol-1" style="width: 653px;background-color: #fffaf1;">
+                    <!--The nav bar is built as a list and each link is the list item-->
                     <ul class="nav navbar-nav ml-auto" style="background-color: #fffaf1;">
+                        <!--Here are the links to the about, market, at the farm drop down, and contact pages-->
                         <li class="nav-item" role="presentation"><a class="nav-link" href="about" style="height: 46px;width: 98px;font-size: 20px;">About</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="market" style="font-size: 20px;">Market</a></li>
                         <li class="nav-item" role="presentation"></li>
@@ -39,6 +58,7 @@
                         </li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="contact" style="font-size: 20px;">Contact</a></li>
                         <li class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"><i class="fas fa-shopping-cart fa-fw" style="font-size: 23px;height: 27px;width: 30px;margin: 3px;"></i><span class="badge badge-danger badge-counter"></span></a>
+                            <!--This is where the cart drop down is located-->
                             <div
                                 class="dropdown-menu dropdown-list dropdown-menu-right animated--grow-in" role="menu">
                                 <h6 class="dropdown-header" style="font-size: 14px;background-color: rgb(180,116,66);">My basket</h6>
@@ -59,8 +79,11 @@
                                     </div>
                                 </a><a class="text-center dropdown-item small text-gray-500" href="#" style="font-size: 20px;background-color: rgb(79,121,96);color: rgb(255,255,255);padding: 4px;"><strong>Check Out</strong></a></div>
                 </li>
+                <!--This is the log in button-->
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="padding: 8px;margin: 0px;"></a></li>
-              </ul><button onclick = "window.location.href='login'" class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
+              </ul>
+              <!--This is the button itself and the link to the login page-->
+              <button onclick = "window.location.href='login'" class="btn btn-primary" type="button" style="width: 85px;margin: 9px;padding: 6px;background-color: rgb(79,121,96);">Log In</button></div>
         </div>
     </nav>
 
@@ -69,6 +92,7 @@
 
     <!-- Footer -->
     <div class="footer-dark" style="background-color: rgb(144,93,51);height: 20%;padding: 50px;width: 100%;">
+        <!-- This footer holds the logo, address, and various other important details about Sprout Creek-->
         <footer>
             <div class="container">
                 <div class="row">
@@ -76,6 +100,7 @@
                         <ul></ul><img src="images/logo.png?h=adece2ed323b3f2ce91ddc8f52cddb21" style="width: 166px;padding: -2px;margin: 1px;"></div>
                     <div class="col-sm-6 col-md-3 item">
                         <ul>
+                            <!--These are the links on the bottom-->
                             <li style="height: 35px;font-size: 20px;">About</li>
                             <li style="font-size: 20px;height: 35px;">Market</li>
                             <li style="height: 35px;font-size: 20px;">At The Farm</li>
@@ -83,6 +108,7 @@
                             <li><a href="#"></a></li>
                         </ul>
                     </div>
+                    <!--This is the address in the footer as well as the social media connections below-->
                     <div class="col-md-6 item text">
                         <h3 style="font-size: 20px;">Sprout Creek Farm<br></h3>
                         <p>34 Lauer Road, Poughkeepsie, New York, 12603<br><br>Hours: &nbsp;Everyday, 11:00 AM - 4:00 PM<br><br>Inquiry Phone Number: +1 (845) 485-8438<br>Market Ordering Phone Number: +1 (845) 485-9886<br>E-Mail: info@sproutcreekfarm.org</p>
@@ -94,16 +120,7 @@
             <p class="copyright">Sprout Creek Farm © 2019</p>
     </div>
     </footer>
-    </div>
-    <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
-    <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
-    <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
-    <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
+    </div>  
     </body>
 
 </html>
