--- a/views/user_dashboard-edit_info.hbs
+++ b/views/user_dashboard-edit_info.hbs
@@ -9,15 +9,22 @@
   <li> <a href="/user_dashboard/edit_information"> Edit Information </a> </li>
 </ul>
 
-
 <form>
   <table>
+    <tr>
+      <td>
+        Account ID
+      </td>
+      <td>
+        <input id="aid" value="{{aid}}" type="textbox" readonly> </input>
+      </td>
+    </tr>
     <tr>
       <td>
         First Name
       </td>
       <td>
-        <input id="first_name" type="textbox"> </input>
+        <input id="first_name" value="{{firstname}}" type="textbox"> </input>
       </td>
     </tr>
     <tr>
@@ -25,7 +32,7 @@
         Last Name
       </td>
       <td>
-        <input id="last_name" type="textbox"> </input>
+        <input id="last_name" value="{{lastname}}" type="textbox"> </input>
       </td>
     </tr>
     <tr>
@@ -33,7 +40,7 @@
         Address
       </td>
       <td>
-        <input id="address" type="textbox"> </input>
+        <input id="address" value="{{address}}" type="textbox"> </input>
       </td>
     </tr>
     <tr>
@@ -41,7 +48,7 @@
         City
       </td>
       <td>
-        <input id="city" type="textbox"> </input>
+        <input id="city" value="{{city}}" type="textbox"> </input>
       </td>
     </tr>
     <tr>
@@ -49,7 +56,7 @@
         ZIP
       </td>
       <td>
-        <input id="zip" type="textbox"> </input>
+        <input id="zip" value="{{zip}}" type="textbox"> </input>
       </td>
     </tr>
     <tr>
@@ -57,7 +64,23 @@
         Phone Number
       </td>
       <td>
-        <input id="phone_number" type="textbox"> </input>
+        <input id="phone_number" value="{{phonenumber}}" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Email
+      </td>
+      <td>
+        <input id="email" value="{{email}}"type="textbox" readonly> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Username
+      </td>
+      <td>
+        <input id="username" value="{{username}}"type="textbox" readonly> </input>
       </td>
     </tr>
     <tr>
