--- a/views/admin_dashboard-manage_accounts.hbs
+++ b/views/admin_dashboard-manage_accounts.hbs
@@ -9,6 +9,41 @@
   <li> <a href="/admin_dashboard/manage_orders"> Manage Orders </a> </li>
   <li> <a href="/admin_dashboard/manage_accounts"> Manage Accounts </a> </li>
 </ul>
+<h1> START ACCOUNTS </h1>
+<table>
+<tr>
+  <td> aid </td>
+  <td> firstname </td>
+  <td> lastname </td>
+  <td> address </td>
+  <td> city </td>
+  <td> zip </td>
+  <td> email </td>
+  <td> phone number </td>
+  <td> username </td>
+  <td> creationdate </td>
+  <td> updateddate </td>
+  <td> isadmin </td>
+
+</tr>
+{{#each accounts}}
+<tr>
+  <td>{{aid}}</td>
+  <td>{{firstname}}</td>
+  <td>{{lastname}}</td>
+  <td>{{address}}</td>
+  <td>{{city}}</td>
+  <td>{{zip}}</td>
+  <td>{{email}}</td>
+  <td>{{phonenumber}}</td>
+  <td>{{username}}</td>
+  <td>{{creationdate}}</td>
+  <td>{{updateddate}}</td>
+  <td>{{isadmin}}</td>
+</tr>
+{{/each}}
+</table>
+<h1> END ACCOUNTS </h1>
 
 <script> function eraseCookie() {
   document.cookie = "CID=";
