Added more pages for the admin dashboard

--- a/views/admin_dashboard-manage_accounts.hbs
+++ b/views/admin_dashboard-manage_accounts.hbs
@@ -9,6 +9,9 @@
   <li> <a href="/admin_dashboard/manage_orders"> Manage Orders </a> </li>
   <li> <a href="/admin_dashboard/manage_accounts"> Manage Accounts </a> </li>
 </ul>
+<ul>
+  <li> <a href="/admin_dashboard/manage_accounts/create_account"> Create Accounts </a> </li>
+</ul>
 <h1> START ACCOUNTS </h1>
 <table>
 <tr>
