--- a/views/admin_dashboard-manage_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory.hbs
@@ -11,7 +11,9 @@
   <li> <a href="/admin_dashboard/manage_orders"> Manage Orders </a> </li>
   <li> <a href="/admin_dashboard/manage_accounts"> Manage Accounts </a> </li>
 </ul>
-
+<ul>
+  <li> <a href="/admin_dashboard/manage_inventory/create_inventory"> Create INVENTORY </a> </li>
+</ul>
 
 <h1> Create/Update item </h1>
   <table>
