--- a/views/admin_dashboard-manage_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory.hbs
@@ -67,7 +67,7 @@
     </tr>
     {{#each items}}
       <tr>
-        <td> {{itemid}} </td>
+        <td> <a href="/admin_dashboard/manage_inventory/sub_inventory/{{itemid}}"> {{itemid}} </a></td>
         <td> {{itemcat}} </td>
         <td> {{itemdesc}} </td>
         <td> {{quantity}} </td>
