--- a/views/marketItem.hbs
+++ b/views/marketItem.hbs
@@ -7,5 +7,5 @@
 <h1> {{{merchantid}}} </h1>
 <h1> {{{itemname}}} </h1>
 <h1> {{{price}}} </h1>
-<p>{{{itemimagelink}}}</p>
+<img src="{{{itemimagelink}}}"/>
 {{/each}}
