--- a/views/admin_dashboard-manage_inventory-create_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-create_inventory.hbs
@@ -1,5 +1,5 @@
 <input type=button value="logout" onClick="eraseCookie()"/>
-<script src="../javascripts/addItem.js" async></script>
+<script src="../../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
 <h2> ADMIN ACCOUNT CREATE INVENTORY PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
