Added order functions to the adminDashboard

--- a/views/admin_dashboard-manage_orders-sub_order.hbs
+++ b/views/admin_dashboard-manage_orders-sub_order.hbs
@@ -26,7 +26,7 @@
   </tr>
   {{#each orders}}
     <tr>
-      <td> <a href="/admin_dashboard/manage_orders/sub_order/{{ordernum}}"> {{ordernum}} </a></td>
+      <td> {{ordernum}} </td>
       <td> {{itemid}} </td>
       <td> {{creditid}} </td>
       <td> {{trackingnum}} </td>
