Added connecting an account to ibm id

--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -40,6 +40,14 @@
     </tr>
     <tr>
       <td>
+        STATE
+      </td>
+      <td>
+        <input id="state" type="textbox"> </input>
+      </td>
+    </tr>
+    <tr>
+      <td>
         ZIP
       </td>
       <td>
