Added the files in the correct format

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,8 @@
+<!--File: error.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/16/2019-->
+<!--Description: This is the body of the create acocunt page-->
+
 <!--Our error page is contained in one div that has the picture, the message, and the button to go home-->
 <div class="container text-center" style="margin-top: 70px;margin-bottom: 70px;width: 50%;height: 800px;">
         <div class="card-group">
