--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/assets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/styles.min.css?h=ff1782feec5a88a7ed7e0e0d66a20689">
 
-
+    <!--Import the necessary javascript files-->
     <script src="javascripts/jquery.min.js?h=83e266cb1712b47c265f77a8f9e18451"></script>
     <script src="bootstrap/js/bootstrap.min.js?h=63715b63ee49d5fe4844c2ecae071373"></script>
     <script src="javascripts/chart.min.js?h=cfa788754642173dafbd830bd7969fdb"></script>
@@ -42,7 +42,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.0/owl.carousel.js"></script>
     <script src="javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 
-    
+
 
     <!--Here we import the client javascript-->
     <script src="javascripts/client.js" async></script>
