--- a/views/admin_dashboard-manage_accounts-sub_account.hbs
+++ b/views/admin_dashboard-manage_accounts-sub_account.hbs
@@ -46,8 +46,25 @@
 <h1> END ACCOUNTS </h1>
 
 <script> function eraseCookie() {
-  document.cookie = "CID=";
-  window.location.href = "/login";
+  // make the api call
+  fetch("/api/logout",
+    {method: "POST",
+      headers: {
+        "Accept": "application/json",
+        "Content-Type": "application/json"
+      },
+    })
+    .then(function(response) {
+      if (response.status !== 200) {
+        alert("Logout failed. Try again.");
+        location.reload(true);
+        return
+      } else {
+        // send to a webpage
+        location.reload(true);
+        return;
+      }
+    });
 }
 
 </script>
